--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,4 @@ Thumbs.db
 *.dll
 *.exe
 build-codigoFuente-Desktop_Qt_5_12_2_MinGW_64_bit-Debug
+build-codigoFuente-Desktop_Qt_6_0_3_MinGW_64_bit-Debug
